--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.0",
     "react-query": "^3.34.16",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "stylelint": "^14.6.1"
+  },
+  "resolutions": {
+    "@types/react": "^17.0.33"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
@@ -27,10 +31,14 @@
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.7",
+    "postcss": "8.4.7",
+    "stylelint-config-standard": "^25.0.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
+    "vite-plugin-environment": "^1.1.0",
+    "vite-plugin-eslint": "^1.3.0",
+    "vite-plugin-stylelint": "^2.0.1",
     "vite-tsconfig-paths": "^3.4.1"
   }
 }
