--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_URL=https://donatio-backend.herokuapp.com/api
+API_URL=http://localhost:3001/api
 CLOUDINARY_CLOUD_NAME= donatiog
 CLOUDINARY_CLOUD_PRESET= jzmb4u1o
 CLOUDINARY_URL=https://api.cloudinary.com/v1_1/donatiog/image/upload
