--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.28.0",
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
+    "react-toastify": "^8.2.0",
     "stylelint": "^14.6.1"
   },
   "resolutions": {
