--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "cloudinary-react": "^1.7.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "nativescript": "^8.1.5",
+    "prettier": "^2.6.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
@@ -30,8 +32,17 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "8.4.7",
     "stylelint-config-standard": "^25.0.0",
     "tailwindcss": "^3.0.23",
