--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^3.7.1",
     "cloudinary-react": "^1.7.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "millify": "^4.0.0",
     "nativescript": "^8.1.5",
     "prettier": "^2.6.1",
     "react": "^17.0.2",
