--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "cloudinary-react": "^1.7.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "feather-icons-react": "^0.5.0",
     "millify": "^4.0.0",
     "nativescript": "^8.1.5",
     "prettier": "^2.6.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.28.0",
     "react-query": "^3.34.16",
