--- a/package.json
+++ b/package.json
@@ -5,17 +5,24 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "^8.0.0",
+    "@testing-library/user-event": "^14.1.1",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "cloudinary-react": "^1.7.1",
     "eslint-plugin-prettier": "^4.0.0",
     "feather-icons-react": "^0.5.0",
+    "jsdom": "^19.0.0",
     "millify": "^4.0.0",
     "nativescript": "^8.1.5",
     "prettier": "^2.6.1",
@@ -29,7 +36,8 @@
     "react-router-dom": "^6.2.2",
     "react-select": "^5.3.0",
     "react-toastify": "^8.2.0",
-    "stylelint": "^14.6.1"
+    "stylelint": "^14.6.1",
+    "vitest": "^0.10.0"
   },
   "resolutions": {
     "@types/react": "^17.0.33"
