--- a/package.json
+++ b/package.json
@@ -13,19 +13,11 @@
     "@chakra-ui/icons": "^1.1.7",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/react-hooks": "^8.0.0",
-    "@testing-library/user-event": "^14.1.1",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "cloudinary-react": "^1.7.1",
-    "eslint-plugin-prettier": "^4.0.0",
     "feather-icons-react": "^0.5.0",
-    "jsdom": "^19.0.0",
     "millify": "^4.0.0",
-    "nativescript": "^8.1.5",
-    "prettier": "^2.6.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
@@ -35,14 +27,15 @@
     "react-query": "^3.34.16",
     "react-router-dom": "^6.2.2",
     "react-select": "^5.3.0",
-    "react-toastify": "^8.2.0",
-    "stylelint": "^14.6.1",
-    "vitest": "^0.10.0"
+    "react-toastify": "^8.2.0"
   },
   "resolutions": {
     "@types/react": "^17.0.33"
   },
   "devDependencies": {
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.1",
+    "stylelint": "^14.6.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
@@ -66,6 +59,13 @@
     "vite-plugin-environment": "^1.1.0",
     "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-stylelint": "^2.0.1",
-    "vite-tsconfig-paths": "^3.4.1"
+    "vite-tsconfig-paths": "^3.4.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "^8.0.0",
+    "@testing-library/user-event": "^14.1.1",
+    "vitest": "^0.10.0",
+    "jsdom": "^19.0.0",
+    "nativescript": "^8.1.5"
   }
 }
