--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "@types/react": "^17.0.33"
   },
   "devDependencies": {
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.1",
-    "stylelint": "^14.6.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "^8.0.0",
+    "@testing-library/user-event": "^14.1.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
@@ -44,14 +45,20 @@
     "@typescript-eslint/parser": "^5.17.0",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
+    "c8": "^7.11.2",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jsdom": "^19.0.0",
+    "nativescript": "^8.1.5",
     "postcss": "8.4.7",
+    "prettier": "^2.6.1",
+    "stylelint": "^14.6.1",
     "stylelint-config-standard": "^25.0.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
@@ -60,12 +67,6 @@
     "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-stylelint": "^2.0.1",
     "vite-tsconfig-paths": "^3.4.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/react-hooks": "^8.0.0",
-    "@testing-library/user-event": "^14.1.1",
-    "vitest": "^0.10.0",
-    "jsdom": "^19.0.0",
-    "nativescript": "^8.1.5"
+    "vitest": "^0.10.0"
   }
 }
