Add mock directories and test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "@pages/*": ["./src/pages/*"],
       "@assets/*": ["./src/assets/*"],
       "@utils/*": ["./src/utils/*"],
+      "@mocks/*": ["./src/mocks/*"],
     }
   },
   "include": ["src"],
